refactor: more accurately explanatory variable and function names

--- a/client/src/components/Chart/Chart.css
+++ b/client/src/components/Chart/Chart.css
@@ -2,11 +2,11 @@
   max-width: 800px;
 }
 
-.chart .chartControls .threeMonths {
+.chartControls .threeMonths {
   border-right: 1px solid grey;
 }
 
-.chart .chartControls button {
+.chartControls button {
   color: grey;
   background: none;
   border: none;
