--- a/client/src/components/Chart/Chart.scss
+++ b/client/src/components/Chart/Chart.scss
@@ -1,14 +1,23 @@
 .chartInfoContainer {
   display: flex;
+  flex-flow: row wrap;
   .chart {
     max-width: 700px;
-    width: 70%;
+    width: 100%;
     margin-right: 10px;
+    @media only screen and (max-width: 1024px) {
+      max-width: 100%;
+    }
+    @media only screen and (max-width: 400px) {
+      height: 100%;
+    }
   }
   .info {
     max-width: 350px;
-    width: 30%;
     overflow: hidden;
+    @media only screen and (max-width: 1024px) {
+      max-width: 80%;
+    }
   }
 }
 
