--- a/client/src/components/Graph/Graph.scss
+++ b/client/src/components/Graph/Graph.scss
@@ -1,7 +1,7 @@
-.chartInfoContainer {
+.graphInfoContainer {
   display: flex;
   flex-flow: row wrap;
-  .chart {
+  .graph {
     max-width: 700px;
     width: 100%;
     margin-right: 10px;
@@ -21,7 +21,7 @@
   }
 }
 
-.chartControls {
+.graphControls {
   display: flex;
   .threeMonths {
     border-right: 1px solid grey;
