--- a/client/src/components/EthPrice/EthPrice.css
+++ b/client/src/components/EthPrice/EthPrice.css
@@ -1,1 +1,17 @@
-/* No CSS *//*# sourceMappingURL=EthPrice.css.map */
+.ethInfo,
+.btcInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.ethInfo h2,
+.btcInfo h2 {
+  margin-right: 15px;
+}
+/*# sourceMappingURL=EthPrice.css.map */
