feat: on clicking star icon, save the current pair to local storage

--- a/client/src/components/Favorites/Favorites.css
+++ b/client/src/components/Favorites/Favorites.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Favorites.css.map */
+.favorites {
+  margin-top: 10px;
+}
+/*# sourceMappingURL=Favorites.css.map */
