--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .container {
   margin: 20px;
 }
+/*# sourceMappingURL=App.css.map */
