style: change color of navbar to match the color theme of the app

--- a/client/src/components/NavigationBar/NavigationBar.css
+++ b/client/src/components/NavigationBar/NavigationBar.css
@@ -10836,4 +10836,8 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+.colorNav {
+  background-color: #fad186;
+}
 /*# sourceMappingURL=NavigationBar.css.map */
