style: import bootstrap styles for the navbar through CDN and overrride background color through custom css

--- a/client/src/components/NavigationBar/NavigationBar.scss
+++ b/client/src/components/NavigationBar/NavigationBar.scss
@@ -1,5 +1,3 @@
-@import '../../../../node_modules/bootstrap/scss/bootstrap';
-
-.colorNav {
+.navbar-expand-sm {
   background-color: rgb(250, 209, 134);
 }
