--- a/client/src/components/GraphControls/GraphControls.css
+++ b/client/src/components/GraphControls/GraphControls.css
@@ -28,4 +28,8 @@
   color: grey;
   margin-left: 10px;
 }
+
+.graphControls .viewOptions label {
+  margin-bottom: 0;
+}
 /*# sourceMappingURL=GraphControls.css.map */
