--- a/client/src/components/EthBtcPrice/EthBtcPrice.scss
+++ b/client/src/components/EthBtcPrice/EthBtcPrice.scss
@@ -2,6 +2,7 @@
   display: inline-grid;
   grid-template-columns: auto auto;
   grid-column-gap: 15px;
+  color: rgb(51, 51, 51);
   @media only screen and (max-width: 610px) {
     display: block;
   }
@@ -20,10 +21,14 @@
     display: flex;
     align-items: center;
     align-content: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5px 10px 5px 10px;
     h2 {
       margin-right: 15px;
+    }
+    div {
+      font-weight: 600;
+      margin-left: auto;
+      order: 2;
     }
   }
 }
