--- a/client/src/components/Graph/Graph.scss
+++ b/client/src/components/Graph/Graph.scss
@@ -16,6 +16,16 @@
       }
     }
   }
+  .tradingStatus p {
+    padding: 5px 10px 5px 10px;
+    margin-bottom: 5px;
+    border-radius: 15px;
+    color: rgb(51, 51, 51);
+    svg {
+      margin-bottom: 3px;
+    }
+  }
+
   .graph {
     max-width: 700px;
     width: 100%;
