--- a/client/src/components/GraphControls/GraphControls.scss
+++ b/client/src/components/GraphControls/GraphControls.scss
@@ -1,8 +1,12 @@
-.graphControls {
+@mixin non-selectable {
   -webkit-user-select: none; /* Chrome all / Safari all */
   -moz-user-select: none; /* Firefox all */
   -ms-user-select: none; /* IE 10+ */
   user-select: none; /* Likely future */
+}
+
+.graphControls {
+  @include non-selectable;
   display: flex;
   .threeMonths {
     border-right: 1px solid grey;
