--- a/client/src/components/NavigationBar/NavigationBar.scss
+++ b/client/src/components/NavigationBar/NavigationBar.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+
 .navbar-expand-sm {
   background-color: rgb(250, 209, 134);
+}
+.appName {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 22px;
 }
