style: adjust the styling of trading status notifications to take less space

--- a/client/src/components/Graph/Graph.css
+++ b/client/src/components/Graph/Graph.css
@@ -52,7 +52,7 @@
 
 .graphInfoContainer .tradingStatus p {
   padding: 5px 10px 5px 10px;
-  margin-bottom: 5px;
+  margin: 3px 5px 3px 5px;
   border-radius: 15px;
   color: #333333;
 }
@@ -61,8 +61,16 @@
   margin-bottom: 3px;
 }
 
+.graphInfoContainer .tradingStatus .isTrading {
+  display: inline-block;
+}
+
 .graphInfoContainer .tradingStatus .isTrading:hover {
   background-color: #9de712 !important;
+}
+
+.graphInfoContainer .tradingStatus .isNotTrading {
+  display: inline-block;
 }
 
 .graphInfoContainer .tradingStatus .isNotTrading:hover {
