--- a/client/src/components/Graph/Graph.scss
+++ b/client/src/components/Graph/Graph.scss
@@ -24,7 +24,7 @@
     @include non-selectable;
     p {
       padding: 5px 10px 5px 10px;
-      margin-bottom: 5px;
+      margin: 3px 5px 3px 5px;
       border-radius: 15px;
       color: rgb(51, 51, 51);
       svg {
@@ -32,11 +32,13 @@
       }
     }
     .isTrading {
+      display: inline-block;
       &:hover {
         background-color: #9de712 !important;
       }
     }
     .isNotTrading {
+      display: inline-block;
       &:hover {
         background-color: #faf742 !important;
       }
