--- a/client/src/components/Graph/Graph.scss
+++ b/client/src/components/Graph/Graph.scss
@@ -30,7 +30,7 @@
       svg {
         margin-bottom: 3px;
       }
-      a svg {
+      .marketplaceLink {
         animation: bounce 1s infinite;
         @keyframes bounce {
           0% {
