--- a/client/src/components/GraphControls/GraphControls.scss
+++ b/client/src/components/GraphControls/GraphControls.scss
@@ -7,6 +7,7 @@
 
 .graphControls {
   @include non-selectable;
+  margin-bottom: 10px;
   display: flex;
   .threeMonths {
     border-right: 1px solid grey;
