--- a/client/src/components/GraphControls/GraphControls.css
+++ b/client/src/components/GraphControls/GraphControls.css
@@ -7,6 +7,7 @@
   /* IE 10+ */
   user-select: none;
   /* Likely future */
+  margin-bottom: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
