--- a/client/src/components/NavigationBar/NavigationBar.scss
+++ b/client/src/components/NavigationBar/NavigationBar.scss
@@ -7,3 +7,13 @@
   font-family: 'Orbitron', sans-serif;
   font-size: 22px;
 }
+.dropdown-item-text {
+  .binanceStatus,
+  .kucoinStatus {
+    vertical-align: middle;
+    float: right;
+  }
+  label {
+    margin-bottom: 0;
+  }
+}
