style: new font for coin info component, and styling for twitter button

--- a/client/src/components/CoinInfo/CoinInfo.css
+++ b/client/src/components/CoinInfo/CoinInfo.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Mallanna&display=swap");
 .info,
 .noInfoAvailable {
+  font-family: 'Mallanna', sans-serif;
   padding: 25px;
   border-radius: 25px;
   background-color: #e2e2e2;
@@ -20,6 +22,30 @@
   .noInfoAvailable {
     max-width: 100%;
   }
+}
+
+.info h3,
+.noInfoAvailable h3 {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.info .twitterButton,
+.noInfoAvailable .twitterButton {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 5px 5px 5px 0;
+  background-color: #1da1f2;
+  padding: 5px 10px 5px 10px;
+  border-radius: 10px;
+}
+
+.info .twitterButton h4,
+.noInfoAvailable .twitterButton h4 {
+  margin-bottom: 0;
+  font-weight: bold;
+  color: white;
 }
 
 .info .confusedFaceImg,
