--- a/client/src/components/CoinInfo/CoinInfo.scss
+++ b/client/src/components/CoinInfo/CoinInfo.scss
@@ -8,6 +8,7 @@
   background-color: rgb(226, 226, 226);
   max-width: 350px;
   overflow: hidden;
+  box-shadow: 1px 1px 3px 2px #ccc;
   @media only screen and (max-width: 1116px) {
     padding: 15px;
     max-width: 710px;
