feat: add Gate.io toggle to Markets dropdown

--- a/client/src/components/NavigationBar/NavigationBar.css
+++ b/client/src/components/NavigationBar/NavigationBar.css
@@ -9,7 +9,8 @@
 }
 
 .dropdown-item-text .binanceStatus,
-.dropdown-item-text .kucoinStatus {
+.dropdown-item-text .kucoinStatus,
+.dropdown-item-text .gateIoStatus {
   vertical-align: middle;
   float: right;
 }
