--- a/client/src/components/NavigationBar/NavigationBar.scss
+++ b/client/src/components/NavigationBar/NavigationBar.scss
@@ -9,7 +9,8 @@
 }
 .dropdown-item-text {
   .binanceStatus,
-  .kucoinStatus {
+  .kucoinStatus,
+  .gateIoStatus {
     vertical-align: middle;
     float: right;
   }
