feat: replace Gate.io with Kraken exchange. Difficulties encountered with obtaining date from Gate.io

--- a/client/src/components/NavigationBar/NavigationBar.css
+++ b/client/src/components/NavigationBar/NavigationBar.css
@@ -10,7 +10,7 @@
 
 .dropdown-item-text .binanceStatus,
 .dropdown-item-text .kucoinStatus,
-.dropdown-item-text .gateIoStatus {
+.dropdown-item-text .krakenStatus {
   vertical-align: middle;
   float: right;
 }
