--- a/client/src/components/NavigationBar/NavigationBar.scss
+++ b/client/src/components/NavigationBar/NavigationBar.scss
@@ -10,7 +10,7 @@
 .dropdown-item-text {
   .binanceStatus,
   .kucoinStatus,
-  .gateIoStatus {
+  .krakenStatus {
     vertical-align: middle;
     float: right;
   }
