feat: replace individual market toggle states with a single dynamic state for all markets

--- a/client/src/components/NavigationBar/NavigationBar.css
+++ b/client/src/components/NavigationBar/NavigationBar.css
@@ -8,9 +8,7 @@
   font-size: 22px;
 }
 
-.dropdown-item-text .binanceStatus,
-.dropdown-item-text .kucoinStatus,
-.dropdown-item-text .krakenStatus {
+.dropdown-item-text .marketStatus {
   vertical-align: middle;
   float: right;
 }
