--- a/client/src/components/NavigationBar/NavigationBar.scss
+++ b/client/src/components/NavigationBar/NavigationBar.scss
@@ -8,9 +8,7 @@
   font-size: 22px;
 }
 .dropdown-item-text {
-  .binanceStatus,
-  .kucoinStatus,
-  .krakenStatus {
+  .marketStatus {
     vertical-align: middle;
     float: right;
   }
