style: add hover effects for dismiss notification button

--- a/client/src/components/UserMessage/UserMessage.css
+++ b/client/src/components/UserMessage/UserMessage.css
@@ -28,4 +28,9 @@
       -ms-flex-order: 2;
           order: 2;
 }
+
+.userMessage .dismissMessageBtn:hover {
+  color: red;
+  cursor: pointer;
+}
 /*# sourceMappingURL=UserMessage.css.map */
